...
    
    var body: some View {
        HStack {
            Button {
                game.restart()
            } label: {
                RoundedImageViewStroked(systemName: "arrow.counterclockwise")
            }
            Spacer()
            Button {
                leaderBoardIsShowing = true
            } label: {
                RoundedImageViewFilled(systemName: "list.dash")
            }
            .sheet(isPresented: $leaderBoardIsShowing) {
                LeaderBoardView(leaderboardIsShowing: $leaderBoardIsShowing, game: $game)
            }
        }
    }
...
