...
    }
}

#Preview {
    VStack {
        InstructionText(text: "Instruction")
        BigNumberText(text: "50")
        SliderLabelText(text: "1")
        LabelText(text: "Score")
        BodyText(text: "You scored 200 points \n🎉🎉🎉")
        ButtonText(text: "Start New Round")
        ScoreText(score: 876)
        DateText(date: Date())
        BigBoldText(text: "Leaderboard")
    }
    .padding()
}
...
